# gitbuddy

./: .gitignore  README.md  pyproject.toml  requirements.txt
gitbuddy/: ai.py  engine.py  install.py  main.py
gitbuddy/commands/: branch.py  clone.py  commit.py  push.py  update.py
gitbuddy_cli-0.1.5/: LICENSE  MANIFEST.in  PKG-INFO
gitbuddy_cli-0.1.5/gitbuddy/: main.py  prompts.py
