[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gitbuddy-cli"
version = "0.2.0"
description = "AI-powered Git assistant that understands natural language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["git", "ai", "cli", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
    "typer",
    "rich",
    "gitpython",
    "groq",
    "python-dotenv",
    "httpx>=0.27.0"
]

[project.scripts]
gitbuddy = "gitbuddy.main:app"


[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*", "tests*", "build*", "dist*"]